--- a/map.css
+++ b/map.css
@@ -3,7 +3,10 @@ body {
 	color:#285585;
 	font-family:monospace;
 }
-
+body#home {
+	background:url('images/back.png') no-repeat top left #b5d0d0;
+	margin-left:150px;
+}
 
 a {
 	color:#1978cf;
@@ -31,8 +34,8 @@ h3 a:hover {
 	border:2px solid #1978cf;
 	box-shadow: 0 0 8px #999;
 	float:left;
-	width:100%;
-	height:100%;	
+	width:600px;
+	height:600px;	
 }
 ul {
 	font-size:.85em;
